--- a/host_vars/ns.schmidbauer.cz.yml
+++ b/host_vars/ns.schmidbauer.cz.yml
@@ -8,7 +8,7 @@ nsd_ips:
 nsd_use_tls: ns.schmidbauer.cz
 
 nsd_patterns:
-  - { name: replicate_to, key: seckey, notify: 151.236.30.179@5353, providexfr: 151.236.30.179@5353 }
+  - { name: "replicate_to", key: "seckey", notify: "151.236.30.179@5353", providexfr: "151.236.30.179@5353" }
 
 nsd_zones:
   - { name: schmidbauer.cz, file: "master/schmidbauer.cz", includepattern: replicate_to }
