--- a/host_vars/ns2.schmidbauer.cz.yml
+++ b/host_vars/ns2.schmidbauer.cz.yml
@@ -8,7 +8,7 @@ nsd_ips:
 nsd_use_tls: ns2.schmidbauer.cz
 
 nsd_patterns:
-  - { name: replicate_from, key: seckey, allownotify: 151.236.30.179@5353, requestxfr: 151.236.30.179@5353 }
+  - { name: "replicate_from", key: "seckey", allownotify: "151.236.30.179@5353", requestxfr: "151.236.30.179@5353" }
 
 nsd_zones:
   - { name: schmidbauer.cz, file: "master/schmidbauer.cz", includepattern: replicate_from }
