--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -21,6 +21,45 @@ nsd_masters:
 nsd_slaves:
   - { ip: "151.236.30.179@5353", key: "seckey" }
 
+nsdzones:
+  schmidbauer.cz:
+    soa: ns.schmidbauer.cz admin.schmidbauer.cz
+    serial: 2011010232
+    refresh: 28800
+    retry: 7200
+    expire: 864000
+    ttl: 86400
+    min_ttl: 86400
+    records:
+      - { type: 'NS',                           value: 'ns.schmidbauer.cz.' }
+      - { type: 'NS',                           value: 'ns2.schmidbauer.cz.' }
+      - { type: 'MX',                           value: '10 mail.schmidbauer.cz.' }
+      - { type: 'MX',                           value: '20 mail2.schmidbauer.cz.' }
+      - { type: 'TXT',                          value: '"v=spf1 mx:schmidbauer.cz -all"' }
+      - { name: 'schmidbauer.cz', type: 'CAA',  value: "128 issue 'letsencrypt.org'" }
+      - { name: 'schmidbauer.cz', type: 'CAA',  value: "128 issuewild ';'" }
+      - { name: 'files',          type: 'A',    value: "193.235.207.56" }
+      - { name: 'files',          type: 'AAAA', value: "2a03:f80:420:193:235:207:56:1" }
+      - { name: 'mon',            type: 'A',    value: "193.235.207.56" }
+      - { name: 'mon',            type: 'AAAA', value: "2a03:f80:420:193:235:207:56:1" }
+      - { name: 'man',            type: 'A',    value: "193.235.207.56" }
+      - { name: 'man',            type: 'AAAA', value: "2a03:f80:420:193:235:207:56:1" }
+      - { name: 'vpn',            type: 'A',    value: "193.235.207.56" }
+      - { name: 'vpn',            type: 'AAAA', value: "2a03:f80:420:193:235:207:56:1" }
+      - { name: 'www',            type: 'A',    value: "193.235.207.51" }
+      - { name: 'www',            type: 'AAAA', value: "2a03:f80:420:193:235:207:51:1" }
+      - { name: 'ns',             type: 'A',    value: "193.235.207.51" }
+      - { name: 'ns',             type: 'AAAA', value: "2a03:f80:420:193:235:207:51:1" }
+      - { name: 'mail',           type: 'A',    value: "193.235.207.51" }
+      - { name: 'mail',           type: 'AAAA', value: "2a03:f80:420:193:235:207:51:1" }
+      - { name: 'mail2',          type: 'A',    value: "151.236.30.179" }
+      - { name: 'mail2',          type: 'AAAA', value: "2a03:f80:ed15:151:236:30:179:1" }
+      - { name: 'ns2',            type: 'A',    value: "151.236.30.179" }
+      - { name: 'ns2',            type: 'AAAA', value: "2a03:f80:ed15:151:236:30:179:1" }
+      - { name: '*',              type: 'A',    value: "193.235.207.51" }
+      - { name: '*',              type: 'AAAA', value: "2a03:f80:420:193:235:207:51:1" }
+      - { name: '_dmarc',         type: 'TXT',  value: "'v=DMARC1;p=quarantine;pct=100;rua=mailto:postmaster@schmidbauer.cz;'" }
+
 # Unbound
 unbound_interfaces:
   - 0.0.0.0
