--- a/host_vars/ns.schmidbauer.cz.yml
+++ b/host_vars/ns.schmidbauer.cz.yml
@@ -7,11 +7,10 @@ nsd_ips:
 
 nsd_use_tls: ns.schmidbauer.cz
 
+nsd_include_pattern: replicate_to
+
 nsd_patterns:
   - { name: "replicate_to", key: "seckey", notify: "151.236.30.179@5353", providexfr: "151.236.30.179@5353" }
-
-nsd_zones:
-  - { name: schmidbauer.cz, file: "master/schmidbauer.cz", includepattern: replicate_to }
 
 # Unbound
 unbound_use_tls: ns.schmidbauer.cz
