--- a/unbound.yml
+++ b/unbound.yml
@@ -33,11 +33,11 @@
       when: unbound_use_adblocks | bool
       tags: unbound
 
-    - name: "unbound - Get AdBlocks"
-      command: /usr/local/bin/adblocks_make.sh
-      when: unbound_use_adblocks | bool
-      become_user: root
-      tags: unbound
+    # - name: "unbound - Get AdBlocks"
+    #   command: /usr/local/bin/adblocks_make.sh
+    #   when: unbound_use_adblocks | bool
+    #   become_user: root
+    #   tags: unbound
 
     - name: "unbound - Configure /var/unbound/etc/unbound.conf"
       template:
