--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -31,10 +31,10 @@ nsdzones:
     ttl: 86400
     min_ttl: 86400
     records:
-      - { type: 'NS',                           value: 'ns.schmidbauer.cz.' }
-      - { type: 'NS',                           value: 'ns2.schmidbauer.cz.' }
-      - { type: 'MX',                           value: '10 mail.schmidbauer.cz.' }
-      - { type: 'MX',                           value: '20 mail2.schmidbauer.cz.' }
+      - { name: 'schmidbauer.cz', type: 'NS',  value: 'ns.schmidbauer.cz.' }
+      - { name: 'schmidbauer.cz', type: 'NS',  value: 'ns2.schmidbauer.cz.' }
+      - { name: 'schmidbauer.cz', type: 'MX',  value: '10 mail.schmidbauer.cz.' }
+      - { name: 'schmidbauer.cz', type: 'MX',  value: '20 mail2.schmidbauer.cz.' }
       - { type: 'TXT',                          value: '"v=spf1 mx:schmidbauer.cz -all"' }
       - { name: 'schmidbauer.cz', type: 'CAA',  value: "128 issue 'letsencrypt.org'" }
       - { name: 'schmidbauer.cz', type: 'CAA',  value: "128 issuewild ';'" }
@@ -56,6 +56,8 @@ nsdzones:
       - { name: 'mail2',          type: 'AAAA', value: "2a03:f80:ed15:151:236:30:179:1" }
       - { name: 'ns2',            type: 'A',    value: "151.236.30.179" }
       - { name: 'ns2',            type: 'AAAA', value: "2a03:f80:ed15:151:236:30:179:1" }
+      - { name: 'webmail',        type: 'A',    value: "193.235.207.56" }
+      - { name: 'webmail',        type: 'AAAA', value: "2a03:f80:420:193:235:207:56:1" }
       - { name: '*',              type: 'A',    value: "193.235.207.51" }
       - { name: '*',              type: 'AAAA', value: "2a03:f80:420:193:235:207:51:1" }
       - { name: '_dmarc',         type: 'TXT',  value: "'v=DMARC1;p=quarantine;pct=100;rua=mailto:postmaster@schmidbauer.cz;'" }
