--- a/nsd.yml
+++ b/nsd.yml
@@ -6,12 +6,19 @@
   become_method: doas
 
   tasks:
+    - name: "nsd - Install ldns-utils for DNSSEC"
+      openbsd_pkg:
+        name: ldns-utils
+        state: present
+      tags: nsd
+      when: nsd_dnssec_sign_zone == true
+
     - name: "nsd - Generate secret"
       shell: dd if=/dev/urandom of=/dev/stdout status=none count=1 bs=64 | openssl base64 | tr -d '\n'
       register: nsd_secret_out
       no_log: true
       tags: nsd
-      when: nsd_make_key == True
+      when: nsd_make_key == true
 
     - set_fact:
         nsd_keys:
@@ -30,7 +37,7 @@
       register: nsd_add_secret
       with_items: "{{ nsd_keys }}"
       tags: nsd
-      when: nsd_make_key == True
+      when: nsd_make_key == true
 
     - name: "nsd - Control setup"
       shell: nsd-control-setup
@@ -49,6 +56,19 @@
       shell: nsd-checkzone {{ item.key }} /var/nsd/zones/master/{{ item.key }}.zone
       register: nsd_check_zones
       with_dict: "{{ nsdzones }}"
+      tags: nsd
+
+    - name: "nsd - Sign zones"
+      command: |
+        export ZSK=`/usr/local/bin/ldns-keygen -a {{ item.nsd_dnssec_zsk_algo }} -b {{ item.nsd_dnssec_zsk_algo_bits } {{ item.key }}`
+        export KSK=`/usr/local/bin/ldns-keygen -a {{ item.nsd_dnssec_ksk_algo }} -b {{ item.nsd_dnssec_ksk_algo_bits } {{ item.key }}`
+        /usr/local/bin/ldns-signzone -n -s $(head -n 1000 /dev/urandom | sha256 | cut -b 1-16) master/{{ item.key }}.zone $ZSK $KSK
+      args:
+        chdir: /var/nsd/zones
+      register: nsd_sign_zones
+      with_dict: "{{ nsdzones }}"
+      # when: nsd_dnssec_sign_zone == true
+      when: "{{ item.nsd_dnssec_sign_zone == true }}"
       tags: nsd
 
     - name: "nsd - Check config"
