--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -23,6 +23,13 @@ nsd_slaves:
 
 nsdzones:
   schmidbauer.cz:
+    #dnssec
+    nsd_dnssec_sign_zone: true     #uses the file [zone].zone.signed
+    nsd_dnssec_zsk_algo: RSASHA512
+    nsd_dnssec_ksk_algo: RSASHA512
+    nsd_dnssec_zsk_algo_bits: 2048
+    nsd_dnssec_ksk_algo_bits: 4096
+    #zone
     soa: ns.schmidbauer.cz. admin.schmidbauer.cz.
     serial: 2011010243
     refresh: 28800
