--- a/nsd.yml
+++ b/nsd.yml
@@ -60,8 +60,8 @@
 
     - name: "nsd - Sign zones"
       command: |
-        export ZSK=`/usr/local/bin/ldns-keygen -a {{ item.nsd_dnssec_zsk_algo }} -b {{ item.nsd_dnssec_zsk_algo_bits } {{ item.key }}`
-        export KSK=`/usr/local/bin/ldns-keygen -a {{ item.nsd_dnssec_ksk_algo }} -b {{ item.nsd_dnssec_ksk_algo_bits } {{ item.key }}`
+        export ZSK=$( /usr/local/bin/ldns-keygen -a "{{ item.nsd_dnssec_zsk_algo }} -b {{ item.nsd_dnssec_zsk_algo_bits }} {{ item.key }}" )
+        export KSK=$( /usr/local/bin/ldns-keygen -a "{{ item.nsd_dnssec_ksk_algo }} -b {{ item.nsd_dnssec_ksk_algo_bits }} {{ item.key }}" )
         /usr/local/bin/ldns-signzone -n -s $(head -n 1000 /dev/urandom | sha256 | cut -b 1-16) master/{{ item.key }}.zone $ZSK $KSK
       args:
         chdir: /var/nsd/zones
