--- a/nsd.yml
+++ b/nsd.yml
@@ -66,7 +66,7 @@
       args:
         chdir: /var/nsd/zones
       register: nsd_sign_zones
-      when: "{{ nsd_dnssec_sign_zones }} == true"
+      when: nsd_dnssec_sign_zones == true
       with_dict: "{{ nsdzones }}"
       tags: nsd
 
