add ksk/zsk keys into vars. steps to re-create dnssec keys

--- a/nsd.yml
+++ b/nsd.yml
@@ -11,7 +11,7 @@
         name: ldns-utils
         state: present
       tags: nsd
-      when: nsd_dnssec_sign_zones == true
+      when: nsd_dnssec_sign_zones|bool == true or nsd_dnssec_recreate_keys|bool == true
 
     - name: "nsd - Generate secret"
       shell: dd if=/dev/urandom of=/dev/stdout status=none count=1 bs=64 | openssl base64 | tr -d '\n'
@@ -58,15 +58,35 @@
       with_dict: "{{ nsdzones }}"
       tags: nsd
 
+    - name: "nsd - Re-create DNSSEC ZSK"
+      command: |
+        /usr/local/bin/ldns-keygen -a "{{ item.nsd_dnssec_zsk_algo }} -b {{ item.nsd_dnssec_zsk_algo_bits }} {{ item.key }}"
+      args:
+        chdir: /var/nsd/zones
+      register: nsd_dnssec_zsk
+      when: nsd_dnssec_sign_zones|bool == true or nsd_dnssec_recreate_keys|bool == true
+      with_dict: "{{ nsdzones }}"
+      tags: nsd
+
+    - name: "nsd - Re-create DNSSEC KSK"
+      command: |
+        /usr/local/bin/ldns-keygen -a "{{ item.nsd_dnssec_ksk_algo }} -b {{ item.nsd_dnssec_ksk_algo_bits }} {{ item.key }}"
+      args:
+        chdir: /var/nsd/zones
+      register: nsd_dnssec_ksk
+      when: nsd_dnssec_sign_zones|bool == true or nsd_dnssec_recreate_keys|bool == true
+      with_dict: "{{ nsdzones }}"
+      tags: nsd
+
     - name: "nsd - Sign zones"
       command: |
-        export ZSK=$( /usr/local/bin/ldns-keygen -a "{{ item.nsd_dnssec_zsk_algo }} -b {{ item.nsd_dnssec_zsk_algo_bits }} {{ item.key }}" )
-        export KSK=$( /usr/local/bin/ldns-keygen -a "{{ item.nsd_dnssec_ksk_algo }} -b {{ item.nsd_dnssec_ksk_algo_bits }} {{ item.key }}" )
+        ZSK=K{{ item.key }}.{{ item.nsd_zsk_id }}
+        KSK=K{{ item.key }}.{{ item.nsd_ksk_id }}
         /usr/local/bin/ldns-signzone -n -s $(head -n 1000 /dev/urandom | sha256 | cut -b 1-16) master/{{ item.key }}.zone $ZSK $KSK
       args:
         chdir: /var/nsd/zones
       register: nsd_sign_zones
-      when: nsd_dnssec_sign_zones == true
+      when: nsd_dnssec_sign_zones|bool == true and nsd_create_zones is changed
       with_dict: "{{ nsdzones }}"
       tags: nsd
 
