--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -89,7 +89,7 @@ nsdzones:
       - { name: '_993._tcp.mail2',  type: 'CNAME',value: "tlsa._dane.mail2.schmidbauer.cz." }
 
       - { name: '_smtp._tls',       type: 'TXT',   value: '"v=TLSRPTv1; rua=mailto:admin@schmidbauer.cz"' }
-      - { name: '_mta-sts',         type: 'TXT',   value: '"v=STSv1; id=29112020"' }
+      - { name: '_mta-sts',         type: 'TXT',   value: '"v=STSv1; id=29112020"' }      # serial to be updated with policy change
       - { name: 'autoconfig',       type: 'CNAME', value: "mail.schmidbauer.cz." }
 
       - { name: '_submission._tcp', type: 'SRV',   value: "0 1 465 mail.schmidbauer.cz" }
