--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -36,7 +36,7 @@ nsdzones:
     nsd_dnssec_ksk_algo_bits: 4096
     #zone
     soa: ns.schmidbauer.cz. admin.schmidbauer.cz.
-    serial: 2011010250
+    serial: 2011010252
     refresh: 28800
     retry: 7200
     expire: 1209600
@@ -70,6 +70,8 @@ nsdzones:
       - { name: 'mail2',          type: 'AAAA', value: "2a03:f80:ed15:151:236:30:179:1" }
       - { name: 'ns2',            type: 'A',    value: "151.236.30.179" }
       - { name: 'ns2',            type: 'AAAA', value: "2a03:f80:ed15:151:236:30:179:1" }
+      - { name: 'stream',         type: 'A',    value: "193.235.207.51" }
+      - { name: 'stream',         type: 'AAAA', value: "2a03:f80:420:193:235:207:51:1" }
       - { name: 'webmail',        type: 'A',    value: "193.235.207.56" }
       - { name: 'webmail',        type: 'AAAA', value: "2a03:f80:420:193:235:207:56:1" }
       - { name: 'mta-sts',        type: 'A',    value: "151.236.30.179" }
