--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -36,7 +36,7 @@ nsdzones:
     nsd_dnssec_ksk_algo_bits: 4096
     #zone
     soa: ns.schmidbauer.cz. admin.schmidbauer.cz.
-    serial: 2011010250
+    serial: 2011010253
     refresh: 28800
     retry: 7200
     expire: 1209600
@@ -52,6 +52,8 @@ nsdzones:
       - { type: 'CAA',            value: '128 issuewild ";"' }                  # value needs double quotes!
       - { type: 'A',              value: "193.235.207.51" }                     # apex record
       - { type: 'AAAA',           value: "2a03:f80:420:193:235:207:51:1" }      # apex record
+      - { name: 'cloud',          type: 'A',    value: "151.236.30.179" }
+      - { name: 'cloud',          type: 'AAAA', value: "2a03:f80:ed15:151:236:30:179:1" }
       - { name: 'files',          type: 'A',    value: "193.235.207.56" }
       - { name: 'files',          type: 'AAAA', value: "2a03:f80:420:193:235:207:56:1" }
       - { name: 'mon',            type: 'A',    value: "193.235.207.56" }
