--- a/host_vars/ns.schmidbauer.cz.yml
+++ b/host_vars/ns.schmidbauer.cz.yml
@@ -5,7 +5,7 @@ nsd_ips:
   - ::1
   - 2a03:f80:420:193:235:207:51:1
 
-nsd_use_tls: ns.schmidbauer.cz
+# nsd_use_tls: ns.schmidbauer.cz
 
 nsd_include_pattern: replicate_to
 
