--- a/unbound.yml
+++ b/unbound.yml
@@ -40,6 +40,14 @@
     #   become_user: root
     #   tags: unbound
 
+    - name: "unbound - make AdBlocks"
+      cron:
+        name: "make adblocks file"
+        special_time: daily
+        job: "/usr/local/bin/adblocks_make.sh"
+      when: unbound_use_adblocks | bool
+      tags: unbound
+
     - name: "unbound - Configure /var/unbound/etc/unbound.conf"
       template:
         src: "unbound.conf.j2"
