--- a/unbound.yml
+++ b/unbound.yml
@@ -40,7 +40,7 @@
     #   become_user: root
     #   tags: unbound
 
-    - name: "unbound - make AdBlocks"
+    - name: "unbound - Cronjob to make AdBlocks"
       cron:
         name: "make adblocks file"
         special_time: daily
