--- a/host_vars/ns2.schmidbauer.cz.yml
+++ b/host_vars/ns2.schmidbauer.cz.yml
@@ -17,3 +17,6 @@ unbound_use_tls: ns2.schmidbauer.cz
 
 unbound_interfaces:
   - 2a03:f80:ed15:151:236:30:179:2
+
+unbound_interfaces_tls:
+  - 2a03:f80:ed15:151:236:30:179:2@853
